# pheromone

./: .gitignore  CMakeLists.txt  README.md
client/anna_client/: README.md  setup.py
client/anna_client/anna/: anna_pb2.py  base_client.py  shared_pb2.py
client/pheromone/: bench_common.py  client.py  mr_framework.py  test_serialization.py  utils.py
client/pheromone/benchmarks/: event_gen.py  func_chain.py  func_interaction.py  ml_pipeline.py  mr_sort.py  mr_word_count.py  parallel_sleep.py  risk_query.py
common/cmake/: CodeCoverage.cmake  clang-format.cmake
common/hydro-vendor/spdlog/: CMakeLists.txt
common/hydro-vendor/zeromqcpp/: CMakeLists.txt
common/include/: CMakeLists.txt  anna_threads.hpp  common.hpp  kvs_threads.hpp  op_threads.hpp  requests.hpp  safe_ptr.hpp  trigger.hpp  types.hpp
common/include/anna_client/: kvs_client.hpp
common/include/lattices/: core_lattices.hpp  lattice.hpp  lww_pair_lattice.hpp  multi_key_causal_lattice.hpp  priority_lattice.hpp  single_key_causal_lattice.hpp
common/include/zmq/: socket_cache.cpp  socket_cache.hpp  zmq_util.cpp  zmq_util.hpp
common/proto/: anna.proto  common.proto  kvs.proto  operation.proto  platform.proto
common/scripts/: check-format.sh  install-dependencies-osx.sh  install-dependencies.sh
common/scripts/travis/: llvm-gcov.sh  travis-install.sh
common/shm-ipc/: CMakeLists.txt
common/shm-ipc/demo/kvs/: main.cpp
conf/: local.yml
deploy/cluster/: README.md
deploy/cluster/deploy/cluster/: add_nodes.py  create_cluster.py  gen_function_ds.py  mannual_update.py  remove_node.py  util.py
deploy/cluster/deploy/cluster/kops/: create_cluster_object.sh  delete_node.sh  modify_ig.sh  validate_cluster.sh
deploy/cluster/deploy/cluster/kops/yaml/igs/: coordinator-ig.yml  ebs-ig.yml  function-ig.yml  general-ig.yml  memory-ig.yml  routing-ig.yml  sender-ig.yml
deploy/cluster/deploy/cluster/yaml/ds/: coordinator-ds.yml  ebs-ds.yml  function-ds-extreme.yml  function-ds-high.yml  function-ds-low.yml  function-ds.yml  memory-ds.yml  routing-ds.yml  sender-ds.yml
deploy/cluster/deploy/cluster/yaml/services/: management.yml  routing.yml
deploy/cluster/docs/: getting-started-aws.md
deploy/local/: README.md
dockerfiles/: base.dockerfile  pheromone.dockerfile  start-pheromone.sh
examples/cpp/anna_chain/: anna_read.cpp  anna_write.cpp  upload_chain.sh
examples/cpp/event_stream/: collect.sh  compile.sh  count.cpp  get_compaign.cpp  preprocess.cpp  upload.sh
examples/cpp/function_chain/: inc.cpp  upload_chain.sh
examples/cpp/map_reduce/: collect.sh  compile_upload.sh  mapper_template.cpp  reducer_template.cpp  sort_map.cpp  sort_partition.cpp  sort_reduce.cpp  sort_utils.cpp  wc_map.cpp  wc_reduce.cpp
examples/cpp/ml_pipeline/: average.cc  compile.sh  label_image.cc  resize.cc  upload.sh
examples/cpp/parallel_sleep/: parallel_join.cpp  sleep.cpp  upload_parallel.sh
examples/cpp/risk_query/: filter_loc.cpp  query_count.cpp  risk_level.cpp  upload.sh
examples/cpp/simple_chain/: clear_all.sh  first.cpp  read_func.cpp  second.cpp  write_func.cpp
include/coordinator/: coord_handlers.hpp
include/executor/: function_lib.hpp
include/function_interface/: cpp_function.hpp
include/scheduler/: comm_helper.hpp  object_handlers.hpp
scripts/: build.sh  compile.sh  start-client-test.sh  start-pheromone-local.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_test.cpp
src/coordinator/: CMakeLists.txt  app_register_handler.cpp  bucket_op_handler.cpp  coordinator.cpp  func_call_handler.cpp  notify_handler.cpp  query_handler.cpp  trigger_op_handler.cpp
src/executor/: CMakeLists.txt  executor_server.cpp
src/manager/: CMakeLists.txt  manager_server.cpp
src/scheduler/: CMakeLists.txt  object_handlers.cpp  scheduler_server.cpp
