
CMAKE_MINIMUM_REQUIRED(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/target)
SET (CMAKE_VERBOSE_MAKEFILE 1)

SET(CLIENT_SOURCE 
    client_test.cpp
)

ADD_EXECUTABLE(client ${CLIENT_SOURCE})
TARGET_LINK_LIBRARIES(client ${CACHE_DEPENDENCIES})
ADD_DEPENDENCIES(client hydro-zmq zeromq zeromqcpp)