
CMAKE_MINIMUM_REQUIRED(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/target)

INCLUDE_DIRECTORIES(../../include/executor)
INCLUDE_DIRECTORIES(../../include/function_interface)

SET(EXECUTOR_SOURCE 
    executor_server.cpp
)

ADD_EXECUTABLE(executor ${EXECUTOR_SOURCE})
TARGET_LINK_LIBRARIES(executor ${CACHE_DEPENDENCIES})
TARGET_LINK_LIBRARIES(executor shm-ipc rt)
TARGET_LINK_LIBRARIES(executor ${CMAKE_DL_LIBS})
ADD_DEPENDENCIES(executor hydro-zmq zeromq zeromqcpp shm-ipc)